<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.LoginFragment">

    <!-- Back Button -->
    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_margin="16dp"
        android:visibility="gone"
        android:src="@drawable/back_button"
        android:contentDescription="Back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Logo -->
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="179dp"
        android:layout_height="72dp"
        android:layout_marginTop="72dp"
        android:src="@drawable/labaid_insuretech_logo"
        android:contentDescription="Logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Title -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_phone_no"
        android:textColor="#8E3CCB"
        android:textSize="16sp"
        android:fontFamily="@font/karla_bold"
        android:textStyle="bold"
        android:layout_marginTop="150dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Subtitle -->
    <TextView
        android:id="@+id/tvSubTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/we_ll_send_a_4_digit_code_to_your_phone_no"
        android:textColor="#666666"
        android:textSize="12sp"
        android:fontFamily="@font/karla_regular"
        android:layout_marginTop="10dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etCorporateID"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/corporate_id"
        android:maxLength="11"
        android:inputType="text"
        android:visibility="gone"
        android:textSize="16sp"
        android:paddingStart="10dp"
        android:background="@drawable/button_stroke_background"
        app:layout_constraintTop_toBottomOf="@id/tvSubTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Phone Input -->
    <EditText
        android:id="@+id/etPhone"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/phone_no"
        android:maxLength="11"
        android:inputType="phone"
        android:textSize="16sp"
        android:paddingStart="10dp"
        android:background="@drawable/button_stroke_background"
        app:layout_constraintTop_toBottomOf="@id/etCorporateID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_bd_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bd_code"
        android:textStyle="bold"
        android:visibility="gone"
        android:textSize="16sp"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toStartOf="@+id/etPhone"
        app:layout_constraintTop_toTopOf="@id/etPhone"
        app:layout_constraintBottom_toBottomOf="@+id/etPhone"
        />

    <TextView
        android:id="@+id/phone_number_validation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintStart_toStartOf="@+id/etPhone"
        app:layout_constraintTop_toBottomOf="@+id/etPhone"
        />

    <!-- Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGetCode"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/get_verification_code"
        android:textAllCaps="false"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        android:fontFamily="@font/karla_extra_bold"
        android:enabled="false"
        android:background="@drawable/button_background"
        android:layout_marginTop="25dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/phone_number_validation_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_are_you_a_corporate_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/text_color"
        android:fontFamily="@font/karla_regular"
        android:text="@string/are_you_a_corporate_person"
        android:layout_marginBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_login_as_corporate"
        />

    <TextView
        android:id="@+id/tv_login_as_corporate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_as_corporate"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        android:textColor="@color/band_color"
        android:fontFamily="@font/karla_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>